add shell compeletion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "ppcargo"
 version = "0.1.0"
 authors = ["Keishi Kawada <Kk-shli@outlook.jp>"]
 description = "Tools for ppc(programming professional and coding)"
+build = "build.rs"
 
 [dependencies]
+clap = "2.20.3"
+
+[build-dependencies]
 clap = "2.20.3"
